--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "node-fetch": "^3.0.0",
     "pusher": "^5.0.0",
     "redis": "^3.1.2",
-    "sequelize": "^6.6.5"
+    "sequelize": "^6.6.5",
+    "urlencode": "^1.1.0"
   }
 }
